--- a/Pizza.mw
+++ b/Pizza.mw
@@ -1,26 +1,26 @@
-[[Bestaand:Pizza con funghi e olive chiang mai.jpg|thumb|250px|Pizza met peddesteule en olieven]]
-[[Bestaand:Pizza in oven.jpg|thumb|250px|Ne pizza in den oawen van Italiaans ethoes]]
-[[Bestaand:Pizza im Pizzaofen von Maurizio.jpg|thumb|250px|Inkiek in nen hooltoawen]]
-[[Bestaand:Supreme pizza.jpg|thumb|250px|Nen Amerikaansen pizza]]
+[[Bestaand:Pizza con funghi e olive chiang mai.jpg|thumb|250px|Pizza med päddestöle en olyven]]
+[[Bestaand:Pizza in oven.jpg|thumb|250px|Ne pizza in den oaven van een italiaansk eathuus]]
+[[Bestaand:Pizza im Pizzaofen von Maurizio.jpg|thumb|250px|Inkyk in nen holtoaven]]
+[[Bestaand:Supreme pizza.jpg|thumb|250px|Nen amerikaansken pizza]]
 
-Ne '''Pizza''' is ne meesttieds roonde [[deeg]]skiewe, met doarop verskeadene bestaanddelen. De pizza keump oorsproonkelik oet et gebeed roond de [[Middellaandse Zee]], benaamd [[Italië]]. Doar was et al eankele doezenden joaren gebroek um de ettenswoaren van "teelders van stoete" te etten. De bestaanddelen zeent meestal [[keze]], [[nepkeze]], [[tomaat|tomaten]], [[gruunte|greunkost]], [[olief|oliewen]] of [[peddestool|peddesteule]]. de pizza wörd in nen heten oawen ebakken.
+Ne '''Pizza''' is ne (meysttyds) runde deygskyve, med dårup verskeidene bestanddeylen. De pizza kümt oorsprunglik uut de streake rund de [[Middellaandse Zee|Middellandse Sea]] en dan med name [[Italie]]. Dår was et al verskeidene jåren gebrukelik üm eatenswåren van ''telders van stute'' te eaten. De bestanddeylen sint meysttyds (nep)[[keze|kaese]], [[tomaat]], [[gruunte|gröönkost]], [[olyven]] of [[paddestool|päddestöle]]. Bakken wordt pizza's in heate oavens.
 
-Oet opgreawingen blik at de [[Vikingen]] al in et [[9e eeuw|9de joarhoonderd]] platte, roonde deegboadems atten, met doarop allerhaande bestaanddelen. Dee deden ze bakken in oawens dee as der al zowat etzelfde oetzaggen as de hudige pizza-oawens. Et doerden nog achthoonderd joar vuur at de leu et in Italië vuur et eerste oawer pizza's harren.
+Uut upgraevingen blikt at de [[Vikingen]] in de [[9e eeuw|9. eywe]] platte runde deygboadems atten, med dårup allerhande bestanddeylen. Dee deaden se bakken in oavens dee as der al sowat etselvde uutsaggen as de hüdige pizza-oavens. Et duurden noch achthunder jår vöär at dee lüde et in Italie vöär et eyrst pizza's nöömden.
 
-Eerst in et [[17e eeuw|17de joarhoonderd]] wörd der in [[Napels]] eskrewen oawer de pizza, woer as de leu noar de öarmere delen van de stad treuken um disse 'boerenemoaltied' te etten. De pizzamakers neumden ze pizzaioli.
+Eyrst in de [[17e eeuw|17. eywe]] skreaven se in [[Napels]] oaver "pizza", wår as de lüde når de öärmere deylen van de stad tröäken üm disse 'burenemåltyd' te eaten. Pizzamakers nöömden se ''pizzaioli''.
 
-In [[1889]] wör den bekeandsten pizzaiolo (pizzamaker) van Napels, [[Raffaele Esposito]], oet eneudigd um vuur keunink [[Umberto I]] van Italië en zinne vrouwe [[Margaretha van Savoye]] ne pizza vuur öar te bakken. Hee bedachten vuur disse geleagenhead ne pizza met tomatensaus, [[mozzarella]] en [[basilikum]]; de kluren van de vlagge van et in [[1861]] op erichte [[Keuninkriek Italië]]. De keuniginne veund et vuural biezeunder lekker, woerduur as de ''pizza margherita'' geboren was. Disse pizza was et begin vuur alle pizza's zo as vie dee non nog keant.
+In [[1889]] wör den bekendsten pizzaiolo van Napels, [[Raffaele Esposito]], uutnöydigd üm vöär köäning [[Umberto I]] van Italie en syne vrouwe ]]Margaretha van Savoye]] ne pizza te bakken. Vöär disse geleygenheid bedachden hee ne pizza med tomatensause, [[mozzarella]] en [[basilikum]]; de klöären van et in [[1861]] uprichtede [[Köäningryk Italie]]. Vöäral de köäniginne vünd et bysünder lekker, wårdöär as de ''Pizza Margherita'' geboren was. Disse pizza was et begin vöär alle pizza's so as wy se vandage den dag noch kent.
 
-Noa as völle Italianen vort treuken noar de [[Verenigde Stoaten]], ontsteund doar ne egene vörm van pizza's, met vake nen dikkeren boadem en meardere bestaanddelen. Duurdet de Amerikaanse Italianen de baanden vake nog anheulden met de Europese Italianen, wörden de Italiaanse pizza's ook verdan oetbeundiger, mer nooit zo oetvoerig as de Amerikaanse pizza's.
+In de [[20e eeuw|20. eywe]] tröäken vöäle italianen når de [[Verenigde Stoaten|Vereynigde Ståten]]. Dår untstünden nye vörme van pizza's, med vake nen dikkeren boadem en meyrdere bestanddeylen. Döärdat de amerikaanske italianen banden bleaven anholden med öäre family in Europa en so ouk recepten uutwesselden, wördden de pizza's in Europa ouk uutbündiger. Mär nooit so uutvorig as de Amerikaanske pizza's.
 
-Töt in de zestiger joaren van et [[20e eeuw|20ste joarhoonderd]] was de Italjaanse pizza vake een groot rechtheukig stukke deeg met bloots een betken tomatensaus en wat keze of [[ansjovis]]. Dit wör ik kleane stroatteantjes versk ebakken op grote platen. Der wör dan ook een rechtheukig stukke of esnedene bie et verkopen.
+Töt in de sestiger jåren van de 20. eywe was de italiaanske pizza vake een gorut rechthökig stükke deyg med blouts een beaten tomatensais en wat kaese of [[ansjovis]]. Dat deaden se in kleine stråtkröämkes up groute bakplaten bakken. By et verkoupen wör der weader een rechthökig stükke afsneaden.
 
-In völle restaurants in nen hoop leande wörd pizza an peunten esnedene verkocht an et skap. Ne pizzapeunte is vake nen kwart of achtste deel van nen roonden pizza. Huuze woer as iej pizza köant etten wordt pizzeria's neumd.
+In vöäle landen verkoupt se pizza's vöär esneaden an et skap. Ne pizzapünte is vake nen kwart (verendeyl) of achtste van nen runden pizza. Eathüse wår as pizza et meystverköchte gerecht is, nöömt se pizzeria's.
 
 ===Mooi um te weten===
-*In [[Iran]] ma'j seend [[2006]] gin ''pizza'' mear zeggen, umdet ze doar alle [[leenwoard|leenwöarde]] oet de sproake weelt hebben. Doarumme het et doar non, oawer ezat, 'buugzame stoete'.
-*De Italianen zeent zo good in de VS op enömmen, det de meeste Amerikanen rechtevoort meant at de pizza ne Amerikaanse oetveending is. 
-* De Pizza Hawaii wörd vake as Amerikaanse pizza neumd, mer dissen is in [[Nederlaand]] oet edacht en later noar Amerika met enömmen.
+*In [[Iran]] mag y et gerecht seyt [[2006]] gin ''pizza'' meyr nömen. Ümdat se dår alle leynwöörde uut de språke wilt halen, nöömd se et nu (oaversat) 'buugsame stute'.
+*De pizza is so inbörgerd in de VS, dat de meyste amerikanen meynet dat de pizza ne amerikaanske uutvinding is. 
+* De Pizza Hawaii wördt vake ne amerikaanske pizza nöömd, mär is in [[Nederland|Neaderland]] bedacht en invoord in Amerika.
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Eten]]
