*Empty MediaWiki Message*

--- a/Pizza.mw
+++ b/Pizza.mw
@@ -9,7 +9,7 @@ Uut upgraevingen blikt at de [[Vikingen]] in de [[9e eeuw|9. eywe]] platte runde
 
 Eyrst in de [[17e eeuw|17. eywe]] skreaven se in [[Napels]] oaver "pizza", wår as de lüde når de öärmere deylen van de stad tröäken üm disse 'burenemåltyd' te eaten. Pizzamakers nöömden se ''pizzaioli''.
 
-In [[1889]] wör den bekendsten pizzaiolo van Napels, [[Raffaele Esposito]], uutnöydigd üm vöär köäning [[Umberto I]] van Italie en syne vrouwe ]]Margaretha van Savoye]] ne pizza te bakken. Vöär disse geleygenheid bedachden hee ne pizza med tomatensause, [[mozzarella]] en [[basilikum]]; de klöären van et in [[1861]] uprichtede [[Köäningryk Italie]]. Vöäral de köäniginne vünd et bysünder lekker, wårdöär as de ''Pizza Margherita'' geboren was. Disse pizza was et begin vöär alle pizza's so as wy se vandage den dag noch kent.
+In [[1889]] wör den bekendsten pizzaiolo van Napels, [[Raffaele Esposito]], uutnöydigd üm vöär köäning [[Umberto I]] van Italie en syne vrouwe [[Margaretha van Savoye]] ne pizza te bakken. Vöär disse geleygenheid bedachden hee ne pizza med tomatensause, [[mozzarella]] en [[basilikum]]; de klöären van et in [[1861]] uprichtede [[Köäningryk Italie]]. Vöäral de köäniginne vünd et bysünder lekker, wårdöär as de ''Pizza Margherita'' geboren was. Disse pizza was et begin vöär alle pizza's so as wy se vandage den dag noch kent.
 
 In de [[20e eeuw|20. eywe]] tröäken vöäle italianen når de [[Verenigde Stoaten|Vereynigde Ståten]]. Dår untstünden nye vörme van pizza's, med vake nen dikkeren boadem en meyrdere bestanddeylen. Döärdat de amerikaanske italianen banden bleaven anholden med öäre family in Europa en so ouk recepten uutwesselden, wördden de pizza's in Europa ouk uutbündiger. Mär nooit so uutvorig as de Amerikaanske pizza's.
 
