/* Mooi um te weten */

--- a/Pizza.mw
+++ b/Pizza.mw
@@ -5,7 +5,7 @@
 
 Ne '''Pizza''' is ne (meysttyds) runde deygskyve, med dårup verskeidene bestanddeylen. De pizza kümt oorsprunglik uut de streake rund de [[Middellaandse Zee|Middellandse Sea]] en dan med name [[Italie]]. Dår was et al verskeidene jåren gebrukelik üm eatenswåren van ''telders van stute'' te eaten. De bestanddeylen sint meysttyds (nep)[[keze|kaese]], [[tomaat]], [[gruunte|gröönkost]], [[olyven]] of [[paddestool|päddestöle]]. Bakken wordt pizza's in heate oavens.
 
-Uut upgraevingen blikt at de [[Vikingen]] in de [[9e eeuw|9. eywe]] platte runde deygboadems atten, med dårup allerhande bestanddeylen. Dee deaden se bakken in oavens dee as der al sowat etselvde uutsaggen as de hüdige pizza-oavens. Et duurden noch achthunder jår vöär at dee lüde et in Italie vöär et eyrst pizza's nöömden.
+Uut upgraevingen blikt at de [[Vikingen]] in de [[9e eeuw|9. eywe]] platte runde deygboadems atten, med dårup allerhande bestanddeylen. Dee deaden se bakken in oavens dee as der al sowat etselvde uutsaggen as de hüdige pizza-oavens. Et duurden noch achthunderd jår vöär at dee lüde et in Italie vöär et eyrst pizza's nöömden.
 
 Eyrst in de [[17e eeuw|17. eywe]] skreaven se in [[Napels]] oaver "pizza", wår as de lüde når de öärmere deylen van de stad tröäken üm disse 'burenemåltyd' te eaten. Pizzamakers nöömden se ''pizzaioli''.
 
@@ -18,7 +18,7 @@ Töt in de sestiger jåren van de 20. eywe was de italiaanske pizza vake een gor
 In vöäle landen verkoupt se pizza's vöär esneaden an et skap. Ne pizzapünte is vake nen kwart (verendeyl) of achtste van nen runden pizza. Eathüse wår as pizza et meystverköchte gerecht is, nöömt se pizzeria's.
 
 ===Mooi um te weten===
-*In [[Iran]] mag y et gerecht seyt [[2006]] gin ''pizza'' meyr nömen. Ümdat se dår alle leynwöörde uut de språke wilt halen, nöömd se et nu (oaversat) 'buugsame stute'.
+*In [[Iran]] mag y et gerecht seyt [[2006]] gin ''pizza'' meyr nömen. Ümdat se dår alle leynwöörde uut de språke wilt halen, nöömt se et nu (oaversat) 'buugsame stute'.
 *De pizza is so inbörgerd in de VS, dat de meyste amerikanen meynet dat de pizza ne amerikaanske uutvinding is. 
 * De Pizza Hawaii wördt vake ne amerikaanske pizza nöömd, mär is in [[Nederland|Neaderland]] bedacht en invoord in Amerika.
 
