*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -337,14 +337,18 @@ De nye Mombasa-Ugandalyne is döär China betaald. Volgens een artikel up CNN si
 
 In 2007 makeden de keniaanske regeyring et plan ''Vision 2030'' bekend, een ekonomisk untwikkelingsprogramma wårmed as Kenia in 2030 up denselvden voot hoapet te koamen as de Ekonomiske Tygers van Asie. In 2013 gavven et een Nationaal Klimaatveranderingsplan uut. In et warkplan van 200 bladsyden, untwikkeld med hülpe van de [[Clima & Development Knowledge Network]], beskrivt et land öäre visy vöär een 'klimaatvast untwikkelpad når laege koalstuvuutstoat'. By de uutgave in maert 2013 seade den sekretåris van et Ministery van Planning, Nationale Untwikkeling en Vision 2030 dat klimaat een middelpunt was in et vernyde Halverweags Termynplan wat in de månden dårup uut sul koamen. Dit sul een rechtstreyks en robüüst raamwark weasen vöär et warkplan en de seykerheid geaven dat klimaatverandering een ekonomybreyd punt wördt.<ref>[http://cdkn.org/2013/03/news-kenyas-national-climate-change-action-plan-is-officially-launched/ cdkn.org. Climate & Development Knowledge Network. "NEWS: Kenya's National Climate Change Action Plan is officially launched".] Skreaven up 28 March 2013.</ref>
 
-
 ===Öäly-undersöök===
-
 [[File:Kenya Aerial 2009-08-27 14-26-44.JPG|thumb|upright=1.35|[[Lake Turkana]] borders Turkana County]]
 
 Et is bekend dat Kenia öälyvöärråden hevt in de [[Gråfskap Turkana]]. President Mwai Kibaki makeden up 26 maert 2012 bekend at Tullow Oil een britsk-yrsk öäly-undersööksbedryv öäly vünden had, mär dat et noch drey jår duren sul üm te kyken of et genog was üm an te verdenen.<ref>[https://www.bbc.co.uk/news/world-africa-17513488 BBC News – Kenya oil discovery after Tullow Oil drilling]. BBC. 26 March 2012.</ref>
 
 In 2006 teakenden den domåligen chineesken president [[Hu Jintao]] een öälykuntrakt med Kenia. Et was deyl van een ryge handelsoavereynkoamsten wårmed Afrika's natuurlike hülpstovven når China's rap groiende ekonomy musten blyven koamen. Med disse oavereynkoamst möäg China's nationale öäly- en gasbedryv vry når öäly boaren in Kenia. Inmiddels wördt der eboard by de grense med Süüd-Sudan, et betwiste land van de Noord-Oustelike Provincy up de grense med [[Somalie]] en in küstwateren.<ref>[http://www.ft.com/cms/s/0/a51a39d2-280c-11db-b25c-0000779e2340.html Financial Times. fy.com. Barber, Lionel, England, Andrew. "China's scramble for Africa finds a welcome in Kenya". Skreaven up 10 augustus 2006.] Bekeaken up 27 juni 2008.</ref>
+
+===Kinderwark en prostituty===
+[[File:Enfants Masai - Kenya décembre 1990.jpg|thumb|upright=1.35| De [[Maasai (volk)|Maasai]] woanet in Kenia en Tanzania.]]
+
+Kinderarbeid is wydverbreid in Kenia. De meyste kinder warket in de landbouw.<ref>[http://www.unhcr.org/refworld/pdfid/4d4a6806d.pdf (PDF) UNHCR.org. "Country profile report – Kenya". (2009).</ref> In 2006 skatten UNICEF dat ungeveyr 30% van alle meydkens in de küststreaken van Malindi, Mombasa, Kilifi en Diana med prostituty te maken kreagen. De meyste prostituees in Kenia sint tüsken de 9 en 18 jår old. Et Keniaanske Ministery vöär Kindersaken had in 2009 so'n 400 kinderbeskarmingsambtenaren in deenst. De reydenen vöär kinderwark sint årmode, gin togang töt underwys en nit good warkende regeyringsinstellingen. Kenia underskreav Konventy 81 up warkinspektys in de industry en Konventy 129 up kinderarbeid in de landbouw.<ref>[http://www.njas.helsinki.fi/pdf-files/vol10num2/suda.pdf Suda, Collette. "The Invisible Child Worker in Kenya: The Intersection of Poverty, Legislation and Culture". Nordic Journal of African Studies, 2010 vol 10 is 2.] p 163–175.</ref>
+[[File:African Kids working in the family farm.jpg|thumb|Kinder an et wark in Kenia]]
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
