/* Chineeske investeringen en handel */

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -326,7 +326,7 @@ Et grötste andeyl elektriciteit kümt van geothermiske energy.<ref>[https://web
 In de gråfskap Turkana sit öäly in de grund. Et yrske bedryv [[Tullow Oil]] skattet at der rund de 1 miljard vaten uut te halen sint.<ref>[https://www.bloomberg.com/news/2013-08-19/kenya-from-nowhere-plans-east-africa-s-first-oil-exports-energy.html Bloomberg.com. "Kenya From Nowhere Plans East Africa's First Oil Exports: Energy".] Bekeaken up 15 augustus 2019. </ref> Et land undersöcht noch of der anderswår noch öäly sit. Kenia importeert noch alle ruwe petröäly en is noch vulleydig afhanglik van de 21-daagse vöärråden dee as de öälymarkt vöärskrivt. Petröäly beslüt 20% töt 25% van de landelike uutgaven.<ref>[https://af.reuters.com/article/investingNews/idAFJOE74J0F220110520?pageNumber=1&virtualBrandChannel=0 Reuters.com. "Kenya plans strategic oil reserve"]. Reuters (10 November 2011).</ref>
 
 ===Chineeske investeringen en handel===
-Up de websteyde van [[98.4 Capital FM]], een landelik radiostation, stünd te leasen dat [[China]]'s ambassadöör vöär Kenia, Liu Guangyuan by president Kenyatta's besöök an Peking seade: "China hevt inmiddels € 425 miljoon investeerd. Dårmed sint se Kenia's gröätste brunne van butenlandske investeringen. Weadersydsen handel was good vöär €2,6 miljard in 2012. Med Kenyatta reisden noch 60 sakenlüde med, dee as €2,2 miljoon understöäning van China wullen krygen vöär ne spoarlyne van van Mombasa når Uganda en €1,6 miljard vöär nen dam."
+Up de websteyde van [[98.4 Capital FM]], een landelik radiostation, stünd te leasen dat [[China]]'s ambassadöör vöär Kenia, Liu Guangyuan, by president Kenyatta's besöök an Peking seade: "China hevt inmiddels € 425 miljoon investeerd. Dårmed sint se Kenia's gröätste brunne van butenlandske investeringen. Weadersydsen handel was good vöär €2,6 miljard in 2012. Med Kenyatta reisden noch 60 sakenlüde med, dee as €2,2 miljoon understöäning van China wullen krygen vöär ne spoarlyne van van Mombasa når Uganda en €1,6 miljard vöär nen dam."
 
 In 2014 begün Kenia mineralen med China te verhandelen, so as [[ilmenyt]].<ref>[https://www.standardmedia.co.ke/business/article/2000104631/kenya-joins-mineral-exporters-as-first-titanium-cargo-leaves-port Standard Digital News. "Business – Kenya joins mineral exporters as first titanium cargo leaves port". Jackson Okoth, Philip Mwakio. Skreaven up 14 february 2014.] Bekeaken up 15 February 2015.</ref> 
 
