--- a/Kenia.mw
+++ b/Kenia.mw
@@ -354,8 +354,7 @@ Kinderarbeid is wydverbreid in Kenia. De meyste kinder warket in de landbouw.<re
 [[File:Kikuyu woman traditional dress.jpg|thumb|upright|A [[Bantu peoples|Bantu]] [[Kikuyu (volk)|Kikuyu]]-vrowe in traditionele uutdossing]]
 
 {|class="wikitable" style="float: right; margin-left: 10px"
-! colspan="4"  style="text-align:center; background:#cfb;"|Bevolking{{UN_Population|ref}}
-|-
+! colspan="4"  style="text-align:center; background:#cfb;"|Bevolking|-
 ! style="background:#cfb;"|Jår
 ! style="background:#cfb;"|Miljoon
 |-
@@ -363,7 +362,7 @@ Kinderarbeid is wydverbreid in Kenia. De meyste kinder warket in de landbouw.<re
 |-
 |style="text-align:left;"|2000 ||style="text-align:right;"|31,4
 |-
-|style="text-align:left;"|{{UN_Population|Year}} ||style="text-align:right;"|{{#expr:{{formatnum:{{UN_Population|Kenya}}|R}}/1e6 round 1}}
+|style="text-align:left;"|{{UN_Population|Year}} ||style="text-align:right;"|
 |}
 Up 1 januåry 2017 had Kenia ungeveyr 48 miljoon inwoaners. Med 73% dårvan under de 30 jår old hevt Kenia ne junge bevolking. Ouk is et inwoanertal de lätste jåren hard egroid;<ref>[http://www.csmonitor.com/2008/0114/p17s01-wmgn.html Csmonitor.com. "Why a new president may slow population growth]". ''The Christian Science Monitor''. 14 january 2008. Bekeaken up 18 augustus 2018.</ref><ref>[http://cliodynamics.ru/index.php?option=com_content&task=view&id=360&Itemid=1 Zinkina J. en Korotayev A. "Explosive Population Growth in Tropical Africa: Crucial Omission in Development Forecasts (Emerging Risks and Way Out)". World Futures, vol 70,  is 2. (2014). p 120–139.]</ref> van 2,9 miljoon når meyr as 40 miljoon in hunderd jår tyd.<ref>[https://www.nytimes.com/2008/01/17/opinion/17iht-edheinsohn.1.9292632.html Exploding population]". ''The New York Times''. 7 January 2008.</ref>
 
