--- a/Roggemoer.mw
+++ b/Roggemoer.mw
@@ -1,10 +1,10 @@
 [[Bestaand:Korenveld Vm1o.jpg|thumb|Korenveld]]
-De '''roggemoer''' of (in [[Grunnen (provìnzie)|Grunning]] en [[Drenthe|Noord-Drenthe]]) '''roggemouer''' is een wezen uut 't [[volksgeleuf]] det in een veld [[rogge (graon)|rogge]] of aandersoortig [[graon]] mut huzen.
+De '''roggemode''' of (in [[Grunnen (provìnzie)|Grönningen]] en [[Drenthe|Noord-Drenthe]]) '''roggemoder''' is een weasen üüt et [[volksgeleuf|volksgelöyv]] dät in een veld [[rogge (graon)|rogge]] of andersoortig [[graon|grån]] sol hüsen.
 
-Kiender wördden ewaorschouwd niet 't veld in te lopen, umdet aans de roggemoer heur zol griepen en mitnemen. As in een korenveld de [[halm|halmen]] aanders beweegt as dej verwachten zol, wördden wal edocht det 't niet deur de wiend kwaamp, mar deur de roggemoer.
+Kinder wördden ewårschouwed neet et veld in te loupen, ümdät anders de roggemoder hear sol grypen en midneamen. As in een koarenveld de [[halm|halmen]] anders beweyget as dät y verwachten sol, wördden wal edocht dät et neet döär de wind kwamt, mar döär de roggemoder.
 
-Allewal 't verhaal van de roggemoer kiender d'rvan weerhuld um in 't koren te speulen, geleufden ok hiel wat volwassenen in de roggemoer. De roggemoer pakte ja wal ies een [[aor (bluiwieze)|aor]] beet, zodet de korrels zwart en giftig wördden. Zoksoort woekering nuumt ze [[moederkoorn]]
-en de korrels (in 't [[Drèents]]) krèeikörrels.
+Alhowal et verhaal van de roggemoder kinder dervan wearhölled üm in et koaren te spöälen, gelöyveden ouk heyl wat vulwassenen in de roggemoder. De roggemoder pakte ja wal is een [[aor (bluiwieze)|år]] beat, sodät de korrels swart en giftig wördden. Sülksoort wokering nömet se [[moederkoorn|moderkoarn]]
+en de korrels (in et [[Drèents]]) krèeikörrels.
 
 ==De roggemoer in de Nedersaksische schrieveri'je==
 :''De hoge smuie oaren
