/* De roggemoer in de Nedersaksische schrieveri'je */

--- a/Roggemoer.mw
+++ b/Roggemoer.mw
@@ -17,7 +17,7 @@ en de korrels (in et [[Drèents]]) krèeikörrels.
 :'' 'n Swaarde groote spoukwief
 :''Mit hoareg roege kop.
 
-Uut [[Derk Sibolt Hovinga]] zien gedicht ''Roggemouer''
+Üüt [[Derk Sibolt Hovinga]] syn gedicht ''Roggemouer''
 
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
