/* De roggemoder in de neadersassisk skryverye */

--- a/Roggemoer.mw
+++ b/Roggemoer.mw
@@ -6,7 +6,7 @@ Kinder wördden ewårschouwed neet et veld in te loupen, ümdät anders de rogge
 Alhowal et verhaal van de roggemoder kinder dervan wearhölled üm in et koaren te spöälen, gelöyveden ouk heyl wat vulwassenen in de roggemoder. De roggemoder pakte ja wal is een [[aor (bluiwieze)|år]] beat, sodät de korrels swart en giftig wördden. Sülksoort wokering nömet se [[moederkoorn|moderkoarn]]
 en de korrels (in et [[Drèents]]) krèeikörrels.
 
-==De roggemoer in de Nedersaksische schrieveri'je==
+==De roggemoder in de neadersassisk skryverye==
 :''De hoge smuie oaren
 :''Boegen veur het kind oet zied
 :''De roggeboaren zingen
