*Empty MediaWiki Message*

--- a/Roggemoer.mw
+++ b/Roggemoer.mw
@@ -1,5 +1,5 @@
-[[Bestaand:Korenveld Vm1o.jpg|thumb|Korenveld]]
-De '''roggemode''' of (in [[Grunnen (provìnzie)|Grönningen]] en [[Drenthe|Noard-Drente]]) '''roggemoder''' is een weasen üüt et [[volksgeleuf|volksgelöyv]] dät in een veld [[rogge (graon)|rogge]] of andersoortig [[graon|grån]] sol hüsen.
+[[Bestaand:Korenveld Vm1o.jpg|thumb|Koarenveld]]
+De '''roggemoder''' of (in [[Grunnen (provìnzie)|Grönningen]] en [[Drenthe|Noard-Drente]]) '''roggemoder''' is een weasen üüt et [[volksgeleuf|volksgelöyv]] dät in een veld [[rogge (graon)|rogge]] of andersoortig [[graon|grån]] sol hüsen.
 
 Kinder wördden ewårschouwed neet et veld in te loupen, ümdät anders de roggemoder hear sol grypen en midneamen. As in een koarenveld de [[halm|halmen]] anders beweyget as dät y verwachten sol, wördden wal edocht dät et neet döär de wind kwamt, mar döär de roggemoder.
 
