*Empty MediaWiki Message*

--- a/Roggemoer.mw
+++ b/Roggemoer.mw
@@ -1,5 +1,5 @@
 [[Bestaand:Korenveld Vm1o.jpg|thumb|Koarenveld]]
-De '''roggemoder''' of (in [[Grunnen (provìnzie)|Grönningen]] en [[Drenthe|Noard-Drente]]) '''roggemoder''' is een weasen üüt et [[volksgeleuf|volksgelöyv]] dät in een veld [[rogge (graon)|rogge]] of andersoortig [[graon|grån]] sol hüsen.
+De '''roggemoder''' of (in [[Grunnen (provìnzie)|Grönningen]] en [[Drenthe|Noard-Drente]]) ''' ''roggemouer'' ''' is een weasen üüt et [[volksgeleuf|volksgelöyv]] dät in een veld [[rogge (graon)|rogge]] of andersoortig [[graon|grån]] sol hüsen.
 
 In een older gedöänte is et wyv een vegetaty-geyst. De kracht dee de gewassen düt gröien. En as y dår neet med gepaste wyse med ümme gåt, heb y geyn etten.
 
