--- a/Roggemoer.mw
+++ b/Roggemoer.mw
@@ -1,7 +1,7 @@
 [[Bestaand:Korenveld Vm1o.jpg|thumb|Koarenveld]]
 De '''roggemoder''' of (in [[Grunnen (provìnzie)|Grönningen]] en [[Drenthe|Noard-Drente]]) ''' ''roggemouer'' ''' is een weasen üüt et [[volksgeleuf|volksgelöyv]] dät in een veld [[rogge (graon)|rogge]] of andersoortig [[graon|grån]] sol hüsen.
 
-In een older gedöänte is et wyv een vegetaty-geyst. De kracht dee de gewassen düt gröien. En as y dår neet med gepaste wyse med ümme gåt, heb y geyn etten.
+In een older gedöänte is et wyv een vegetaty-geyst. De kracht dee et gewas düt gröien. En as y dår neet med gepaste wyse mid ümme gåt, heb y geyn etten.
 
 Kinder wördden ewårschouwed neet et veld in te loupen, ümdät anders de roggemoder hear sol grypen en midneamen. As in een koarenveld de [[halm|halmen]] anders beweyget as dät y verwachten sol, wördden wal edocht dät et neet döär de wind kwamt, mar döär de roggemoder.
 
