--- a/Roggemoer.mw
+++ b/Roggemoer.mw
@@ -6,7 +6,7 @@ Kinder wördden ewårschouwed neet et veld in te loupen, ümdät anders de rogge
 Alhowal et verhaal van de roggemoder kinder dervan wearhölled üm in et koaren te spöälen, gelöyveden ouk heyl wat vulwassenen in de roggemoder. De roggemoder pakte ja wal is een [[aor (bluiwieze)|år]] beat, sodät de korrels swart en giftig wördden. Sülksoort wokering nömet se [[moederkoorn|moderkoarn]]
 en de korrels (in et [[Drèents|drentsk]]) krèeikörrels.
 
-In een older gedöänte is et wyv een vegetaty-geyst. De kracht dee et gewas düt gröien. En as y der neet med gepaste gebrüken mid ümme gåt, heb y geyn etten.
+In een older gedöänte is et wyv een vegetaty-geyst. De kracht dee et gewas düt gröien. En as y der neet med gepaste gebrüken mid ümme gåt, heb y geyn gode ougst.
 
 ==De roggemoder in de neadersassiske skryverye==
 :''De hoge smuie oaren
