/* Geboren */ Knight, 1944; Fogerty, 1945; Minogue, 1968; Boyce, 1999.

--- a/28_meie.mw
+++ b/28_meie.mw
@@ -10,7 +10,11 @@ De volgende gebeurtenissen vunnen of vienen plak op '''28 meie'''
 
 == Geboren ==
 * [[1371]] - [[Jan zonder Vrees]], hertog van Boergondië († [[1419]]) 
+* [[1944]] - [[Gladys Knight]]
+* [[1945]] - [[John Fogerty]]
+* [[1968]] - [[Kylie Minogue]]
 * [[1972]] - [[Michael Boogerd]], Nederlaanse hadfietser
+* [[1999]] - [[Cameron Boyce]]
 
 == Uut de tied ==
 * [[1787]] - [[Leopold Mozart]] (67), Oostenriekse violist, mezieklerer en kompenist
