--- a/Kenia.mw
+++ b/Kenia.mw
@@ -375,6 +375,14 @@ Kenia hevt ne verskeidene bevolking bestånde uut de meyste groute etniske en li
 
 Volgens et keniaanske Nationale Bureau vöär de Ståtistik (KNBS) hevt Kenia ne totale bevolking van 38.610.097 inwoaners. De gröätste inheymske grupen sint de [[Kikuyu (volk)|Kikuyu]] (6.622.576), [[Luhya (volk)|Luhya]] (5.338.666), [[Kalenjin (volk)|Kalenjin]] (4.967.328), [[Luo (volk)|Luo]] (4.044.440), [[Kamba (volk)|Kamba]] (3.893.157), [[Somaliers]] (3.510.757), [[Kisii (volk)|Kisii]] (2.205.669), [[Mijikenda (volk)|Mijikenda]] (1.960.574), [[Meru (volk)|Meru]] (1.658.108), [[Turkana (volk)|Turkana]] (988.592), and [[Maasai (volk)|Maasai]] (841.622). In de [[Noordoustelike Provincy (Kenia)|Noordoustelike Provincy]], vroger bekend as NFD, woanet vöärnamelik inheymske etniske [[somaliers]]. Volker med butenlandske afkoamst sint somailiers uut [[Somalie]], keniaanske arabyren, asiaten en europeanen.<ref>[http://knbs.or.ke/index.php?option=com_phocadownload&view=category&download=585:volume-2-population-and-household-distribution-by-socio-economic-characteristics&id=109:population-and-housing-census-2009&Itemid=599 Kenya National Bureau of Statistics (KNBS). "The 2009 Kenya Population and Housing Census Volume II – Population and Household Distribution by Social Economic Characteristics". p. 397-398.</ref>
 
+===Languages===
+Binnen öäre eygene gemeynskappen spreaket de verskillende volker van Keniameysttyds öäre moderspråke. De beide officiäle landsspråken, [[engels|engelsk]] en [[swahili]], gebruket se as uutwesselingsspråke tüsken verskillende gemeynskappen. Engelsk is wydverbreid in de handel, up skole en in de regeyring.<ref>Proquest Info & Learning (COR). "Culturegrams: World Edition".2009, Proquest/Csa Journal Div. p 98. ISBN 978-0-9778091-6-5.</ref> Lüde in minder groute städen en up den buur sint döär mekander minder meyrspråkig. See spreaket öäre lokale språke.<ref>Brown, E. K., Asher, R. E. en Simpson, J. M. Y. "Encyclopedia of language & linguistics, Volume 1, Edition 2". Elsevier, 2006. p 181. ISBN 978-0-08-044299-0.</ref>
+
+[[Britsk engelsk]] is de modelspråke, mär under invlood van verskillende bantuspråken as swahili en [[kikuyu (språke)|kikuyu]].<ref>[https://web.archive.org/web/20161226102504/http://phdtree.org/pdf/24677752-cross-linguistic-influence-in-kenyan-english-the-impact-of-swahili-and-kikuyu-on-syntax/ (Archiveerd) Nyaggah, Lynette Behm. "Cross-linguistic influence in Kenyan English: The impact of Swahili and Kikuyu on syntax". University of California. Skreaven up 8 augustus 2014.]</ref> Et is seyt de kolonisaty in untwikkelng en bevattet ouk verskeidene elementen van [[amerikaansk engelsk]]. [[Sheng-slang]] is ne up swahili egrunde [[bargunsk]]e språke in een antal städelike deylen. Et besteyt vöäral uut ne mengeling van swahili en engelsk en is een vöärbeald van [[kode-switchen]].<ref>[https://www.google.com/books?id=M8cHBAAAQBAJ Derek Nurse, Gérard Philippson. "Bantu Languages". Routledge, 2006. p 197. ISBN 978-1-135-79683-9]. Bekeaken up 20 oktober 2014.</ref>
+
+Allens by mekander wordet der so'n 69 verskillende språken in Kenia küred. De meysten behöyret by de twey groute afrikaanske språkenfamilys: [[Niger-Kongospråken]] (bantu-tak) en [[Nilo-saharaspråken]] (nilotisken tak). Kusjitiske en arabiske minderheden spreaket språken dee as by de [[afroasiatiske språken]] höyret. Indiaske en europääske inwoaners küret språken dee under de [[Indo-Uropeese taolen|Indo-Europääske språken]] valt.<ref>[http://www.ethnologue.com/show_country.asp?name=KE Ethnologue.com. "Languages of Kenya"].</ref>
+
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 
