--- a/Kenia.mw
+++ b/Kenia.mw
@@ -319,7 +319,7 @@ De döär China betaalde spoarlyne van Mombasa når Uganda güng lös in [[2017]
 ===Energy===
 Et grötste andeyl elektriciteit kümt van geothermiske energy.<ref>[https://web.archive.org/web/20180811133300/https://www.iea.org/statistics/statisticssearch/report/?country=Kenya&product=electricityandheat iea.org. (Archiveerd). "Electricity in Kenya".] 11 augustus 2018.</ref> As tweyde vöärnaamste energybrunne hebbet se hydroelektriske stations in dammen by de höygere [[Tanarivyr]] en de dam by de [[Turkwelkloov]] in et westen. De rest van de energy kümt van een petröälykrachtwark an de küste, geothermiske installatys by [[Olkaria]] en importeerd uut [[Uganda]]. Selv kun Kenia tüsken 2001 en 2003 1142 [[megawatt]] upwekken. Et ståtsbedryv [[Kenya Electricity Generating Company]] (KenGen), wat in 1997 uprichted wör under de name Kenya Power Company, geyt oaver et upwekken, terwyl as et bedryv Kenya Power oaver de verspreiding geyt. Et land hevt mangs te maken med uutval, vöäral as der döär dröygte te weinig water vöärby de dammen kümt.
 
-Üm de groiende vråge by te beynen, wil Kenya in 2024 anvangen med de bow van een kernenergycentrale. In 2019 sint dårvöär al verskeidene lokatys bekeaken, under meyr an den Indisken Oceaan, et Turkanamear en et Viktoriamear. Vöär den bow kryget se hülpe uut [[Rusland]], [[China]] en [[Süüd-Korea]].<re>[https://www.esi-africa.com/industry-sectors/generation/kenya-nuclear-electricity-board-evaluates-nuclear-sites/ Esi-africa.com. "Kenya Nuclear Electricity Board evaluates nuclear sites". Skreaven up 8 januåri 2019.] Bekeaken up 15 augustus 2019.</ref>
+Üm de groiende vråge by te beynen, wil Kenya in 2024 anvangen med de bow van een kernenergycentrale. In 2019 sint dårvöär al verskeidene lokatys bekeaken, under meyr an den Indisken Oceaan, et Turkanamear en et Viktoriamear. Vöär den bow kryget se hülpe uut [[Rusland]], [[China]] en [[Süüd-Korea]].<ref>[https://www.esi-africa.com/industry-sectors/generation/kenya-nuclear-electricity-board-evaluates-nuclear-sites/ Esi-africa.com. "Kenya Nuclear Electricity Board evaluates nuclear sites". Skreaven up 8 januåri 2019.] Bekeaken up 15 augustus 2019.</ref>
 
 [[File:Worker in Olkaria Kenya.jpg|thumb|upright|Warklüde by de [[Geothermiske energycentrale van Olkaria]]]]
 
