Stillen Oceaan is nit den Indisken Oceaan

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -26,7 +26,7 @@ ofbeelding2=|
 umskrieving2=
 }}
 
-'''Kenia''' of '''Kenya''', officieel de '''Keniaanske Republik''' ([[Swahili]]: ''Jamhuri ya Kenya'') is een land in [[Afrika]]. Med de klokke med grenset Kenia an [[Süüd-Sudan]] en [[Ethiopie]] in et noorden, [[Somalie]] in et noordousten, den [[Stillen Oceaan]] en de [[Seychellen]] in et süüdousten, [[Tanzania]] in et süden en an [[Uganda]] in et westen.
+'''Kenia''' of '''Kenya''', officieel de '''Keniaanske Republik''' ([[Swahili]]: ''Jamhuri ya Kenya'') is een land in [[Afrika]]. Med de klokke med grenset Kenia an [[Süüd-Sudan]] en [[Ethiopie]] in et noorden, [[Somalie]] in et noordousten, den [[Indisken Oceaan]] en de [[Seychellen]] in et süüdousten, [[Tanzania]] in et süden en an [[Uganda]] in et westen.
 
 Bestüürlik besteyt et uut 47 half-unafhankelike gråvskappen med yders nen eygen guvernöör. Med 580.367 kilometer in et veerkant is Kenia et 48.-gröätste land up de wearld en med meyr as 52,2 miljoon inwoaners et 27. drukstbevolkte land.<ref>[https://population.un.org/wpp/DataQuery/ population.un.org. World Population Prospects - Population Division - United Nations.] Bekeaken up 29 januåry 2019.</ref> Höyvdstad van Kenia is [[Nairobi]]. De öldste stad en vrogere höyvdstad is [[Mombasa]]. [[Kisumu Stad]] is de dardegröätste stad en binnenlandske haven an et [[Viktoriameyr]]. Andere vöärname steadelike gebeden sint [[Nakuru]] en [[Eldoret]].
 
@@ -216,7 +216,7 @@ In [[2017]] wün Uhuru Kenyatta syn tweyde ambstyd. Weaderümme wör den uutslag
 [[File:Un-kenya.png|thumb|Kaarte van Kenia.]]
 [[File:Koppen-Geiger Map KEN present.svg|thumb|Klimaatkaarte van Kenia.]]
 
-Med 580.367 km²<ref>[https://www.cia.gov/library/publications/the-world-factbook/geos/ke.html Central Intelligence Agency. The World Factbook. "Kenya". 2012.] Bekeaken up 28 mei 2013.</ref> is Kenia et söävenenveertigste land van de wearld wat uppervlakte angeyt. Et ligt tusken de 5° noord- en süderbreydte en 34° en 42° outsterlängde. Vanaf de küste an den Stillen Oceaan klimt et land geleidelik up töt de houglanden in et binnenland. De houglanden wordet döärsneyden döär de [[Riftvallei]], med up et ousten dårvan ne vrüchtbåre streake.
+Med 580.367 km²<ref>[https://www.cia.gov/library/publications/the-world-factbook/geos/ke.html Central Intelligence Agency. The World Factbook. "Kenya". 2012.] Bekeaken up 28 mei 2013.</ref> is Kenia et söävenenveertigste land van de wearld wat uppervlakte angeyt. Et ligt tusken de 5° noord- en süderbreydte en 34° en 42° outsterlängde. Vanaf de küste an den Indisken Oceaan klimt et land geleidelik up töt de houglanden in et binnenland. De houglanden wordet döärsneyden döär de [[Riftvallei]], med up et ousten dårvan ne vrüchtbåre streake.
 
 De keniaanske houglanden sint eyne van de beste landbouwstreaken van Afrika.<ref>Central Intelligence Agency. The World Factbook. Potomac Books, Inc. 2010. ISBN 978-1-59797-541-4. p 336.</ref> In de houglanden ligt ouk et höygste punt van Kenia en de eyn-nå-höygste top van et wearlddeyl: De [[Kenia (barg)|Barg Kenia]], med 5199 meater. Vanuut et süden van Kenia is de [[Kilimanjaro]] (5895 meater) in [[Tanzania]] te seen.
 
@@ -283,7 +283,7 @@ In maert [[1996]] vörmden de presidenten van Kenia, Tanzania en Uganda med meka
 [[File:Elephants at Amboseli national park against Mount Kilimanjaro.jpg|thumb|[[Nationaal Park Amboseli]]]]
 [[File:Tsavo east panorama.jpg|thumb|[[Nationaal Park Oust-Tsavo]]]]
 
-Nå de landbow is tourisme de gröätste brunne van butenlandsk inkoamen.<ref>de Blij, Harm. The World Today: Concepts and Regions in Geography 4th edition. Wiley Publishing: Hoboken, NJ</ref> Verantwoordelik vöär de informatyvöärsening vöär et tourisme is et Kenya Tourism Board.<ref>[http://www.ktb.go.ke/ Kenya KTB.go.ke. Tourism Board. Bekeaken up 2 maert 2017.]</ref> De vöärnaamste touristentrekkers sint fotosafari's döär de 60 nationale parken en wildreservaten. Andere trekkers sint de Groute Trek van de gnus in de [[Masai Mara]], wat te book steyt as et söävende wearldwunder, historiske moskeen en forten uut de koloniale tyd so as by [[Mombasa]], [[Malindi]] en [[Lamu]]. Dårnöäst is Kenia geleevd üm de wydske landskappen so as de witte töppe van de [[Kenia (barg)|Barg Kenia]], et groute [[Riftdal]], teavelden van [[Kericho]], koffyplantages van [[thika]] en et uutsicht up de [[Kilimanjaro]] vanuut et süden.<ref>[http://www.nationsencyclopedia.com/Africa/Kenya-TOURISM-TRAVEL-AND-RECREATION.html NationsEncyclopedia.com. "Tourism, travel, and recreation - Kenya - area".] Bekeaken up 2 maert 2017.</ref> Wydters hevt Kenia uutstrekkede stranden an de [[Swahiliküste]] an den Stillen Oceaan. Et gröätste andeyl touristen kümt uut [[Düütskland]] en et [[Vereynigd Köäningryk]]. See trekket meyst up de stranden en wilparken.
+Nå de landbow is tourisme de gröätste brunne van butenlandsk inkoamen.<ref>de Blij, Harm. The World Today: Concepts and Regions in Geography 4th edition. Wiley Publishing: Hoboken, NJ</ref> Verantwoordelik vöär de informatyvöärsening vöär et tourisme is et Kenya Tourism Board.<ref>[http://www.ktb.go.ke/ Kenya KTB.go.ke. Tourism Board. Bekeaken up 2 maert 2017.]</ref> De vöärnaamste touristentrekkers sint fotosafari's döär de 60 nationale parken en wildreservaten. Andere trekkers sint de Groute Trek van de gnus in de [[Masai Mara]], wat te book steyt as et söävende wearldwunder, historiske moskeen en forten uut de koloniale tyd so as by [[Mombasa]], [[Malindi]] en [[Lamu]]. Dårnöäst is Kenia geleevd üm de wydske landskappen so as de witte töppe van de [[Kenia (barg)|Barg Kenia]], et groute [[Riftdal]], teavelden van [[Kericho]], koffyplantages van [[thika]] en et uutsicht up de [[Kilimanjaro]] vanuut et süden.<ref>[http://www.nationsencyclopedia.com/Africa/Kenya-TOURISM-TRAVEL-AND-RECREATION.html NationsEncyclopedia.com. "Tourism, travel, and recreation - Kenya - area".] Bekeaken up 2 maert 2017.</ref> Wydters hevt Kenia uutstrekkede stranden an de [[Swahiliküste]] an den Indisken Oceaan. Et gröätste andeyl touristen kümt uut [[Düütskland]] en et [[Vereynigd Köäningryk]]. See trekket meyst up de stranden en wilparken.
 
 ===Landbouw===
 Lanbow is de eyn-nå-grötste bydraeger an et keniaanske Bruto binnenlandsk produkt (BBP), nå de deenstensektor. In 2005 was landbouw, med inbegrip van holtkap en viskerye, good vöär 24% van et BBP, vöär 18% van alle lounen en 50% van de uutvoorwinst. De belangrykste winstgewassen sint tea, blomen en planten en koffy. Tea en blomen en planten leyvert et meyste up van alle Kenia's uutvoor. Upbrengsten van belangryke voodselbrunnen as [[mais]] hangt stark af van et weader. As et mangs wat minder geyt, is et land deyls afhanglik van voodselhülpe. Byvöärbeeld in [[2004]] mislükkeden de ougst döär groute dröygte en satten 1,8 miljoon lüde sunder eaten.<ref>[http://wfp.org/news/news-release/drought-leaves-two-million-kenyans-need-food-aid wfp.org. "Drought leaves two million Kenyans in need of food aid". United Nations World Food Programme. Skreaven up 26 april 2005.] Bekeaken up 5 August 2016.</ref>
