--- a/Kenia.mw
+++ b/Kenia.mw
@@ -393,6 +393,34 @@ De tweyde-gröätste religy van Kenia is de [[Islam]], med 15% van de bevolking.
 
 Wyders hevt Kenya noch eyne van Afrika's gröätste [[Hinduisme|hindu]]-gemeynskappen (rund de 300.000 lüde), vöärnamelik van [[India|Indiaaske]] kumaf. Dårnöäst sint hyr de gröätste anhangers van et [[Baha'i]]-gelöyv (430,000). Der is ne kleine [[boeddhisme|buddhisten]]gemeynte.
 
+===Gesundheid===
+
+[[File:Kapsowarhospital1.jpg|thumb|Poliklinik van et AIC Sekenhuus in [[Kapsowar]].]]
+
+Kenia's private sektor is når verholding untwikkeld in vergelyk med andere afrikaanske landen under den [[sahara]]. Private sorgverleaners sint de vöärnaamste doktoren in et land, selvs vöär de armsten. De private gesundheidssorg is grötter en hevt et better vöär mekander as de publike en non-profitorganisatys, wat behandelrüümtes en personeel angeyt. Volgens een rapport van de Wearldbanke geyt sowat de hälvte van de armste 20 percent van de kenianen når ne private sorginstelling as een kind seke is.<ref>[http://documents.worldbank.org/curated/en/434701468048274776/Private-health-sector-assessment-in-Kenya Barnes, Jeff. O'Hanlon, Barbara. Feeley, Frank. McKeon, Kimberley. Gitonga, Nelson. Decker, Caytie. "Private health sector assessment in Kenya". Skreaven up 7 juni 2010.]</ref>
+
+Private sorgverleaners med vegünning warket meysttyds as kleine undernemmingen. De meyste kenianen gåt hyr et leevste hen ümdat se togankelik sint, herkenbår as mark, wår vöär et geld bedet en eyn-up-eyne behandelt. Dit steyt in starke teagenstelling töt de slim [[bureaukratie|burokratiske]] en groutskålige sorgverleaning van de groutendeyls verwaerlousde publike sorginstellingen. Döär disse inefficienty hebbet de regeyring en geldsketers meyr en meyr anstüürd up de wendböärdere en efficientere private dokters. Dit geyt via verskillende programma's med medisk-juridiske deenste, noudhülpe, vaksineren; en undersöök, behandeling en beparking van [[kanker]], [[HIV/AIDS]] en [[tuberkulose]]. Dårnöäst wördt insat up veilig moderskap.
+
+Ydereyne kan by private instellingen terechte. Sekenhüse as et [[Universiteitsseknhuus Aga Khan]] in Nairobi en et Sekenhuus van Mombasa sint vergelykbår med vöäranstånde sekenhüse in et [[Westen]], mär sint düür en dårdöär enkel döär ryke lüde en verseakerden te betalen. 
+
+Der is ne doudelike swarte markt van unregistreerde mediske instellingen, [[kwaksalver]]s en nepmedicynen. Dissen drayt vöäral up de unweatendheid, årmode en wanhoupe van patienten döär et heyle land. By alle registreerde mediske instellingen koamet regelmåtig gesundheidsbeambten vanuut de regeyring en andere nationale reguleringsorganisatys an vöär kontrole- en understüttingsbesöök. See kyket of vuldån wördt an juridiske eisen, so as upstelled in de ''Fair Administratie Action Act'' van 2015. Ouk köänet se kesen vöär wydere hülpe en kwaliteitsverbeateringsprocessen, döär samen te warken under ne sociale franchise, so as de [[Tunza Family Network]], wat geld krig van beide de regeyring en donoren.
+
+Tosicht up mediske handelingen döär unkwalificeerden wördt vake hölden döär [[vennoutskap]]pen, lokale regeyringen en andere künstmåtige juridiske organisatys. Et wördt döär de vingers seen.<ref>[http://www.mbc.ca.gov/Licensees/Corporate_Practice.aspx Mbc.ca.gov. "Corporate Practice - Licensees - Medical Board of California".]</ref>
+
+Wet- en regelgeaving vöär de gesundheidssorg is beparked. Dårümme wördt et vake slecht beheyrd en kryget gesundheidswarkers regelmåtig te maken med mundelike, emotionele en lichamelike mishandeling döär patienten en bestüürders.
+
+Private sorginstellingen sint verskeiden, der sit vöäle verloup in en se låtet sik nit makkelik indeylen. Publike instellingen wordet meysttyds in gradatys indeyld: gemeynskapsinstellingen (Gråd I) wordet beheyrd döär gemeynskapswarkers, dispensäres (Gråd II) wordet beheyrd döär versorgers, gesundheidscentra (Gråd III) döär doktersassistenten, underlokale sekenhüse (Gråd IV) döär doktersassistenten of huusdokters, gråfskapssekenhüse (Gråd V) döär huusdokters en nationale verwysingssekenhüse (gråd VI) döär vulleydig kwalificeerde dokters en gesundheidswarkers.
+
+[[File:Table rco co mo medical practitioners.png|thumb|Tabel med verskillende gråden assistenten, doktoren en chirurgenin Kenia's publike deenst]]
+Verpleygers sint med afstand de grötste gruup gesundheidswarkers in alle sektoren. Dårnå koamet de [[clinical officer]]s (doktersassistenten), [[huusdokter]]s en [[medisk specialist]]en. Volgens et keniaanske Nationaal Bureau vöär Ståtistik warren der in 2011 65.000 kwalificeerde verpleygers in et land, 8600 assistenten en 7000 dokters vöär 43 miljoon lüde. By disse antallen sint ouk de oaverleadene of pensioneerde gesundheidswarkers medrekkend. Et warkelike antal kan dårümme laeger weasen.)<ref>[http://www.knbs.or.ke/index.php?option=com_phocadownload&view=category&download=587:kenya-facts-and-figures-2014&id=20:kenya-facts-figures&Itemid=595. Knbs.or.ke. "Kenya Facts". Bekeaken up 10 juni 2016].</ref>
+
+Döär et heyle land sint traditionele geneasers te vinden ([[krüdendokter]]s, [[heks]]endokters en gebedsgeneasers). Se wordet vöäle besocht.
+
+Undanks dat der al groute trädte maked sint, steyt Kenia noch vöär een paar flinke uutdagingen. De döärsneyde leavensverwachting is når 55 jår esakked in [[2009]]. Dat is vyv jår minder as in [[1990]].<ref>[http://www.unicef.org/infobycountry/kenya_statistics.html#85 UNICEF Statistics: Kenya]. Unicef.org.</ref> Kinderstarvte is houge, med in döärsneyde 44 up 1000 kinder in [[2012]].<ref>[https://www.cia.gov/library/publications/the-world-factbook/rankorder/2091rank.html?countryName=Kenya&countryCode=ke&regionCode=afr&rank=53#ke Infant Mortality ranks]. ''The World Factbook''</ref> De Wearldgesundheidsorganisaty skatteden in [[2011]] dat by mär 42% van de geboortes ne kwalificeerde gesundheidswarker by was.<ref>[http://www.who.int/gho/publications/world_health_statistics/EN_WHS2011_Part1.pdf WHO Health-Related Millennium Development Goals Report 2011].</ref>
+
+Kenmarkende årmodeseektes sint ouk in Kenia wydverbreid: de hälvte van de kenianen leavet under de årmodegrense. Vöärkoambåre seektes, so as [[malaria]], HIV/AIDS, lungunstekking, diarree en undervoding sint belangryke kindermoordenaars. Dårnöäst sorget slecht beleid, [[umkeuperieje|ümköyperye]], inadekwate gesundheidswarkers, slecht behear en leiderskap vöär vöäle ellende. Volgens ne skatting uut 2009 had 6,3% van de vulwassenen HIV/AIDS.<ref>[https://www.cia.gov/library/publications/the-world-factbook/rankorder/2155rank.html?countryName=Kenya&countryCode=ke&regionCode=afr&rank=11#ke CIA World Factbook: HIV/AIDS – Adult Prevalence Rate Rankings]. Cia.gov. Bekeaken up 23 april 2012.</ref> Toch wist een UNAIDS-rapport van 2011 uut dat de HIV-epidemy händig-an wat verbettert. Minder junge lüde (tüsken 15 en 24 jår) en swangere vrouwlüde hebbet de seekte.<ref>[http://www.unaids.org/en/media/unaids/contentassets/documents/unaidspublication/2011/JC2216_WorldAIDSday_report_2011_en.pdf World AIDS Day Report 2011]. UNAIDS</ref> In [[2006]] wör rund de 15 miljoon mål malaria vünden.<ref>[http://www.who.int/malaria/publications/country-profiles/2009/mal2009_kenya_0025.pdf "Kenya"], p 111–113 in ''World Malaria report 2009''. WHO.</ref>
+
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 
